# trrojan

./: .gitignore  .gitmodules  CMakeLists.txt  HemisphereHullShader.h  LICENCE.txt  README.md  SphereHullShader.h  SphereHullShader0010000040000004.h  SphereHullShader0010000040000006.h  SphereHullShader0010000040008000.h  SphereHullShader0010000040008001.h  SphereHullShader0010000040008002.h  SphereHullShader0010000040008003.h  SphereHullShader0020000040000004.h  SphereHullShader0020000040000006.h  SphereHullShader0020000040008000.h  SphereHullShader0020000040008001.h  SphereHullShader0020000040008002.h  SphereHullShader0020000040008003.h  SphereHullShader0040000040000004.h  SphereHullShader0040000040000006.h  SphereHullShader0040000040008000.h  SphereHullShader0040000040008001.h  SphereHullShader0040000040008002.h  SphereHullShader0040000040008003.h  SphereHullShader0080000040000004.h  SphereHullShader0080000040000006.h  SphereHullShader0080000040008000.h  SphereHullShader0080000040008001.h  SphereHullShader0080000040008002.h  SphereHullShader0080000040008003.h  SphereHullShader0800000040000004.h  SphereHullShader0800000040000006.h  SphereHullShader0800000040008000.h  SphereHullShader0800000040008001.h  SphereHullShader0800000040008002.h  SphereHullShader0800000040008003.h  SphereHullShader1000000040000004.h  SphereHullShader1000000040000006.h  SphereHullShader1000000040008000.h  (+277 more)
trrojan/: 11vs12.trroll  2017-11-27-prelimWin.trroll  2017-11-28-prelimWin.trroll  2017-12-29-ess.trroll  2018-01-25-4.trroll  CMakeLists.txt  app.cpp  app.h  d3d12.trroll  d3d12stream.trroll  demo.trroll  package.appxmanifest  prelim.trroll  spheres.trroll  spheres2.trroll  spheres4.trroll  test.trroll  trrojan.cpp
trrojan/Assets/: bonsai.brudervn  demo_d12.trroll  foot.brudervn  kingfisher.brudervn  veiled-chameleon_xbox-green.brudervn
trrojancl/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  trrojancl.vcxproj  trrojancl.vcxproj.filters
trrojancl/src/: dat_raw_reader.cpp  device.cpp  environment.cpp  plugin.cpp  volume_raycast_benchmark.cpp
trrojancore/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  trrojancore.vcxproj  trrojancore.vcxproj.filters
trrojancore/include/: CImg.h
trrojancore/src/: benchmark.cpp  brudervn_xfer_func.cpp  camera.cpp  com_error_category.cpp  configuration.cpp  configuration_set.cpp  console_output.cpp  constants.cpp  contains.cpp  cool_down.cpp  csv_output.cpp  csv_output_params.cpp  csv_util.cpp  datraw_base.cpp  device.cpp  direct_storage_file.cpp  direct_storage_scope.cpp  environment.cpp  estimate_iterations.cpp  excel_output.cpp  excel_output_params.cpp  excellent_converter.h  executive.cpp  factor.cpp  factor_base.cpp  factor_base.h  factor_enum.cpp  factor_enum.h  factor_range.h  factor_range.inl  graphics_benchmark_base.cpp  image_helper.cpp  io.cpp  log.cpp  mmpld_reader.cpp  output.cpp  output_params.cpp  plugin.cpp  power_collector.cpp  power_state_scope.cpp  (+15 more)
trrojand3d11/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  trrojand3d11.vcxproj  trrojand3d11.vcxproj.filters
trrojand3d11/src/: ColourConversion.hlsli  Create-SphereShaders.ps1  Create-VolumeShaders.ps1  DebugPipeline.hlsli  DebugPixelShader.hlsl  DebugVertexShader.hlsl  HemisphereHullShader.hlsl  LocalLighting.hlsli  OrientToCamera.hlsli  OverlayPixelShader.hlsl  OverlayVertexShader.hlsl  PassThroughGeometryShader.hlsl  RayBoxIntersection.hlsli  RayPassPixelShader.hlsl  RayPassVertexShader.hlsl  ReconstructCamera.hlsli  SinglePassVolumeComputeShader.hlsl  SinglePassVolumePipeline.hlsli  SphereDirectVertexShaderCore.hlsli  SphereDomainShader0010000040000000.hlsl  SphereDomainShader0010000040000001.hlsl  SphereDomainShader0010000040000002.hlsl  SphereDomainShader0010000040000003.hlsl  SphereDomainShader0010000040000004.hlsl  SphereDomainShader0010000040000006.hlsl  SphereDomainShader0010000040000100.hlsl  SphereDomainShader0010000040000102.hlsl  SphereDomainShader0010000040008000.hlsl  SphereDomainShader0010000040008001.hlsl  SphereDomainShader0010000040008002.hlsl  SphereDomainShader0010000040008003.hlsl  SphereDomainShader0010000040010000.hlsl  SphereDomainShader0010000040010001.hlsl  SphereDomainShader0010000040010002.hlsl  SphereDomainShader0010000040010003.hlsl  SphereDomainShader0020000040000000.hlsl  SphereDomainShader0020000040000001.hlsl  SphereDomainShader0020000040000002.hlsl  SphereDomainShader0020000040000003.hlsl  SphereDomainShader0020000040000004.hlsl  (+2113 more)
trrojand3d12/: CMakeLists.txt
trrojand3d12/src/: ColourConversion.hlsli  Create-SphereShaders.ps1  Create-VolumeShaders.ps1  LocalLighting.hlsli  OrientToCamera.hlsli  ReconstructCamera.hlsli  SinglePassVolumeComputeShader.hlsl  SinglePassVolumePipeline.hlsli  SphereDomainShader0010000040000000.hlsl  SphereDomainShader0010000040000001.hlsl  SphereDomainShader0010000040000002.hlsl  SphereDomainShader0010000040000003.hlsl  SphereDomainShader0010000040000004.hlsl  SphereDomainShader0010000040000006.hlsl  SphereDomainShader0010000040000100.hlsl  SphereDomainShader0010000040000102.hlsl  SphereDomainShader0010000040010000.hlsl  SphereDomainShader0010000040010002.hlsl  SphereDomainShader0020000040000000.hlsl  SphereDomainShader0020000040000001.hlsl  SphereDomainShader0020000040000002.hlsl  SphereDomainShader0020000040000003.hlsl  SphereDomainShader0020000040000004.hlsl  SphereDomainShader0020000040000006.hlsl  SphereDomainShader0020000040000100.hlsl  SphereDomainShader0020000040000102.hlsl  SphereDomainShader0020000040010000.hlsl  SphereDomainShader0020000040010002.hlsl  SphereDomainShader0040000040000000.hlsl  SphereDomainShader0040000040000001.hlsl  SphereDomainShader0040000040000002.hlsl  SphereDomainShader0040000040000003.hlsl  SphereDomainShader0040000040000004.hlsl  SphereDomainShader0040000040000006.hlsl  SphereDomainShader0040000040000100.hlsl  (+1308 more)
trrojansnfo/: CMakeLists.txt
trrojanstream/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  trrojanstream.vcxproj  trrojanstream.vcxproj.filters
(+382 files in other folders)
